--- a/portfolio/wp-content/themes/reverie-master/css/style.css
+++ b/portfolio/wp-content/themes/reverie-master/css/style.css
@@ -563,3 +563,22 @@ footer.full-width .love-reverie {
     padding-top: 2rem;
   }
 }
+
+
+/* Ajout CSS*/
+
+.sociaux{
+  width: 10%;
+  text-align: right;
+}
+
+.reseau{
+  float: right;
+}
+
+
+
+
+
+
+
